@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.6
 Date: ????
-  Changes:
+  Internal:
+    - Simplify and consolidate item and quality canonization
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.5
 Date: 2024-10-30
